--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -336,20 +336,20 @@ $(document).ready(function () {
     </li>
     <li class="divider"></li>
     <li>
-      <a href="page-zwischensitzung.html">Zwischensitzung: Wiederholung/ Anwendung des bisher Gelernten</a>
+      <a href="page-zwischensitzung.html">Sithzung 8: Wiederholung/ Anwendung des bisher Gelernten</a>
     </li>
     <li class="divider"></li>
     <li>
-      <a href="page-08kontraste.html">Sitzung 8: Kontraste</a>
+      <a href="page-08kontraste.html">Sitzung 9: Kontraste</a>
     </li>
     <li>
-      <a href="page-09wilcoxon.html">Sitzung 9: Wilcoxon-Tests</a>
+      <a href="page-09wilcoxon.html">Sitzung 10: Wilcoxon-Tests</a>
     </li>
     <li>
-      <a href="page-10korrelz.html">Sitzung 10: Korrelationen und z-Test</a>
+      <a href="page-10korrelz.html">Sitzung 11: Korrelationen und z-Test</a>
     </li>
     <li>
-      <a href="page-11chisquared.html">Sitzung 11: Chi-Quadrat Test</a>
+      <a href="page-11chisquared.html">Sitzung 12: Chi-Quadrat Test</a>
     </li>
   </ul>
 </li>
@@ -455,24 +455,30 @@ body {
 <li>Excel-Datensatz "G*Power zur Testplanung": <a href="q1_dataFiles/07_Hypothesentesten_Testplanung.xlsx">download</a></li>
 </ul>
 </div>
-<div id="zwischensitzung-anwendung-des-bisher-gelernten" class="section level4">
-<h4>Zwischensitzung: Anwendung des bisher Gelernten</h4>
+<div id="sitzung-8-zwischensitzung-anwendung-des-bisher-gelernten" class="section level4">
+<h4>Sitzung 8 Zwischensitzung: Anwendung des bisher Gelernten</h4>
 <ul>
 <li>Excel-Datensatz “Doping am Nordpol”: <a href="q1_dataFiles/Zwischensitzung_DopingNordpol.xlsx">download</a></li>
 <li>Excel-Datensatz “Doping am Nordpol Lösung”: <a href="q1_dataFiles/Zwischensitzung_DopingNordpol_Loesung.xlsx">download</a></li>
 </ul>
 </div>
-<div id="sitzung-8-kontraste" class="section level4">
-<h4>Sitzung 8: Kontraste</h4>
+<div id="sitzung-9-kontraste" class="section level4">
+<h4>Sitzung 9: Kontraste</h4>
 <ul>
 <li>Excel-Datensatz “Kontraste”: <a href="q1_dataFiles/08_Kontraste.xlsx">download</a></li>
 </ul>
 </div>
-<div id="sitzung-9-wilcoxon-rangsummentest" class="section level4">
-<h4>Sitzung 9: Wilcoxon-Rangsummentest</h4>
+<div id="sitzung-10-wilcoxon-rangsummentest" class="section level4">
+<h4>Sitzung 10: Wilcoxon-Rangsummentest</h4>
 <ul>
 <li>Excel-Datensatz “Therapie von Panikstörungen”: <a href="q1_dataFiles/10_Rangtests.xlsx">download</a></li>
 <li>Excel-Datensatz “Reaktion von Haustieren auf Lockdown”: <a href="q1_dataFiles/10_Rangtests_Haustiere.xlsx">download</a></li>
+</ul>
+</div>
+<div id="sitzung-11-korrelationen-und-z-test" class="section level4">
+<h4>Sitzung 11: Korrelationen und z-Test</h4>
+<ul>
+<li>Excel-Datensatz “Depression und Angst”: <a href="q1_dataFiles/11_Korrelationen.xlsx">download</a></li>
 </ul>
 </div>
 
