--- a/page-08kontraste.html
+++ b/page-08kontraste.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Sitzung 8: Inferenzstatistik – Kontraste</title>
+<title>Sitzung 9: Inferenzstatistik – Kontraste</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -412,20 +412,20 @@ div.tocify {
     </li>
     <li class="divider"></li>
     <li>
-      <a href="page-zwischensitzung.html">Zwischensitzung: Wiederholung/ Anwendung des bisher Gelernten</a>
+      <a href="page-zwischensitzung.html">Sithzung 8: Wiederholung/ Anwendung des bisher Gelernten</a>
     </li>
     <li class="divider"></li>
     <li>
-      <a href="page-08kontraste.html">Sitzung 8: Kontraste</a>
+      <a href="page-08kontraste.html">Sitzung 9: Kontraste</a>
     </li>
     <li>
-      <a href="page-09wilcoxon.html">Sitzung 9: Wilcoxon-Tests</a>
+      <a href="page-09wilcoxon.html">Sitzung 10: Wilcoxon-Tests</a>
     </li>
     <li>
-      <a href="page-10korrelz.html">Sitzung 10: Korrelationen und z-Test</a>
+      <a href="page-10korrelz.html">Sitzung 11: Korrelationen und z-Test</a>
     </li>
     <li>
-      <a href="page-11chisquared.html">Sitzung 11: Chi-Quadrat Test</a>
+      <a href="page-11chisquared.html">Sitzung 12: Chi-Quadrat Test</a>
     </li>
   </ul>
 </li>
@@ -461,7 +461,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Sitzung 8: Inferenzstatistik – Kontraste</h1>
+<h1 class="title toc-ignore">Sitzung 9: Inferenzstatistik – Kontraste</h1>
 
 </div>
 
