--- a/page-einfr.html
+++ b/page-einfr.html
@@ -34,7 +34,7 @@
   div.column{display: inline-block; vertical-align: top; width: 50%;}
   div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
   ul.task-list{list-style: none;}
-      </style>
+    </style>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -80,6 +80,7 @@ h6 {
   text-align: left;
 }
 </style>
+
 
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
@@ -287,7 +288,7 @@ $(document).ready(function () {
       <ul class="nav navbar-nav">
         <li>
   <a href="index.html">
-    <span class="fa fa-home"></span>
+    <span class="fas fa-home"></span>
      
     Home
   </a>
@@ -335,20 +336,20 @@ $(document).ready(function () {
     </li>
     <li class="divider"></li>
     <li>
-      <a href="page-zwischensitzung.html">Zwischensitzung: Wiederholung/ Anwendung des bisher Gelernten</a>
+      <a href="page-zwischensitzung.html">Sithzung 8: Wiederholung/ Anwendung des bisher Gelernten</a>
     </li>
     <li class="divider"></li>
     <li>
-      <a href="page-08kontraste.html">Sitzung 8: Kontraste</a>
+      <a href="page-08kontraste.html">Sitzung 9: Kontraste</a>
     </li>
     <li>
-      <a href="page-09wilcoxon.html">Sitzung 9: Wilcoxon-Tests</a>
+      <a href="page-09wilcoxon.html">Sitzung 10: Wilcoxon-Tests</a>
     </li>
     <li>
-      <a href="page-10korrelz.html">Sitzung 10: Korrelationen und z-Test</a>
+      <a href="page-10korrelz.html">Sitzung 11: Korrelationen und z-Test</a>
     </li>
     <li>
-      <a href="page-11chisquared.html">Sitzung 11: Chi-Quadrat Test</a>
+      <a href="page-11chisquared.html">Sitzung 12: Chi-Quadrat Test</a>
     </li>
   </ul>
 </li>
@@ -401,7 +402,7 @@ $(document).ready(function () {
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
