--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -481,6 +481,12 @@ body {
 <li>Excel-Datensatz “Depression und Angst”: <a href="q1_dataFiles/11_Korrelationen.xlsx">download</a></li>
 </ul>
 </div>
+<div id="sitzung-12-analyse-von-nominaldaten" class="section level4">
+<h4>Sitzung 12: Analyse von Nominaldaten</h4>
+<ul>
+<li>Excel-Datensatz “Covid-Impfung”: <a href="q1_dataFiles/12_Nominaldaten.xlsx">download</a></li>
+</ul>
+</div>
 
 <p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
 
