--- a/page-11chisquared.html
+++ b/page-11chisquared.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Sitzung 11: Analyse von Ordinaldaten</title>
+<title>Sitzung 12: Analyse von Nominaldaten</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -425,7 +425,7 @@ div.tocify {
       <a href="page-10korrelz.html">Sitzung 11: Korrelationen und z-Test</a>
     </li>
     <li>
-      <a href="page-11chisquared.html">Sitzung 12: Chi-Quadrat Test</a>
+      <a href="page-11chisquared.html">Sitzung 12: Analyse von Nominaldaten</a>
     </li>
   </ul>
 </li>
@@ -461,7 +461,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Sitzung 11: Analyse von Ordinaldaten</h1>
+<h1 class="title toc-ignore">Sitzung 12: Analyse von Nominaldaten</h1>
 
 </div>
 
