--- a/page-07testpl.html
+++ b/page-07testpl.html
@@ -425,7 +425,7 @@ div.tocify {
       <a href="page-10korrelz.html">Sitzung 11: Korrelationen und z-Test</a>
     </li>
     <li>
-      <a href="page-11chisquared.html">Sitzung 12: Chi-Quadrat Test</a>
+      <a href="page-11chisquared.html">Sitzung 12: Analyse von Nominaldaten</a>
     </li>
   </ul>
 </li>
