--- a/page-einfr.html
+++ b/page-einfr.html
@@ -349,7 +349,7 @@ $(document).ready(function () {
       <a href="page-10korrelz.html">Sitzung 11: Korrelationen und z-Test</a>
     </li>
     <li>
-      <a href="page-11chisquared.html">Sitzung 12: Chi-Quadrat Test</a>
+      <a href="page-11chisquared.html">Sitzung 12: Analyse von Nominaldaten</a>
     </li>
   </ul>
 </li>
