--- a/index.html
+++ b/index.html
@@ -364,12 +364,13 @@ $(document).ready(function () {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Material</li>
     <li>
-      <a href="page-q2_materials.html">Übungsdatensätze</a>
+      <a href="page-q2_materials.html">Video Links und Daten</a>
     </li>
     <li class="divider"></li>
     <li class="divider"></li>
+    <li class="dropdown-header">Wiederholung</li>
     <li>
-      <a href="page-einfr.html">Sitzung 1: Einführung in R</a>
+      <a href="q2_html_pages/Wiederholung1.html">Sitzung 2: Skript zu Video Teil 1 und 2</a>
     </li>
   </ul>
 </li>
@@ -403,7 +404,7 @@ $(document).ready(function () {
 <p><br></p>
 <ul>
 <li><p>Zu den Materalien für <strong>Quanti I</strong> geht es <a href="page-q1_materials.html">hier</a>.</p></li>
-<li><p>Zu den Materialien für <strong>Quanti II</strong> geht es <a href="page-q2_materials.html">hier</a>.</p></li>
+<li><p>Zu den Video-Links und Materialien für <strong>Quanti II</strong> geht es <a href="page-q2_materials.html">hier</a>.</p></li>
 </ul>
 <p><br></p>
 <p>Viel Spaß!</p>
