--- a/page-03deskriptiv.html
+++ b/page-03deskriptiv.html
@@ -440,12 +440,13 @@ div.tocify {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Material</li>
     <li>
-      <a href="page-q2_materials.html">Übungsdatensätze</a>
+      <a href="page-q2_materials.html">Video Links und Daten</a>
     </li>
     <li class="divider"></li>
     <li class="divider"></li>
+    <li class="dropdown-header">Wiederholung</li>
     <li>
-      <a href="page-einfr.html">Sitzung 1: Einführung in R</a>
+      <a href="q2_html_pages/Wiederholung1.html">Sitzung 2: Skript zu Video Teil 1 und 2</a>
     </li>
   </ul>
 </li>
