--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -498,6 +498,7 @@ body {
 <div id="erste-schritte-in-r-teil-1" class="section level2">
 <h2><span class="header-section-number">1.1</span> Erste Schritte in R (Teil 1)</h2>
 <ul>
+<li><p>Begleitendes R-Skript: NEIN</p></li>
 <li><p>Zum Video (Dauer: 35 min) geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1586534476460">hier</a></p></li>
 <li><p>Benötigte Datensätze: KEINE</p></li>
 <li><p>Inhalt (Timestamps):</p>
@@ -524,6 +525,7 @@ body {
 <div id="erste-schritte-in-r-teil-2" class="section level2">
 <h2><span class="header-section-number">1.2</span> Erste Schritte in R (Teil 2)</h2>
 <ul>
+<li><p>Begleitendes R-Skript: NEIN</p></li>
 <li><p>Zum Video (Dauer: 40 min) geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1586537113348">hier</a></p></li>
 <li><p>Benötigter Datensatz: <a href="q2_dataFiles/Kaffeedaten.csv">t-test between (Kaffeedaten)</a></p></li>
 <li><p>Inhalt (Timestamps):</p>
@@ -549,6 +551,7 @@ body {
 <div id="sitzung-2-wiederholung-deskriptive-statistik-abbildung-t-tests" class="section level1">
 <h1><span class="header-section-number">2</span> Sitzung 2: Wiederholung deskriptive Statistik, Abbildung, t-Tests</h1>
 <ul>
+<li>Begleitendes R-Skript: <a href="q2_html_pages/Wiederholung1.html">Sitzung 2: Skript zu Video Teil 1 und 2</a></li>
 <li>Anzahl Videos: 2</li>
 </ul>
 <div id="teil-1" class="section level2">
