--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -527,7 +527,7 @@ body {
 <ul>
 <li><p>Begleitendes R-Skript: NEIN</p></li>
 <li><p>Zum Video (Dauer: 40 min) geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1586537113348">hier</a></p></li>
-<li><p>Benötigter Datensatz: <a href="q2_dataFiles/Kaffeedaten.csv">t-test between (Kaffeedaten)</a></p></li>
+<li><p>Benötigter Datensatz: <a href="q2_dataFiles/daten_ttest_between.csv">t-test between (Kaffeedaten)</a></p></li>
 <li><p>Inhalt (Timestamps):</p>
 <ul>
 <li>01:00 Daten zum Einlesen in R vorbereiten</li>
@@ -578,7 +578,7 @@ body {
 <h2><span class="header-section-number">2.2</span> Teil 2:</h2>
 <ul>
 <li><p>Zum 2. Video (Dauer: 22 min) geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1587665148727">hier</a></p></li>
-<li><p>Benötigter Datensatz: <a href="q2_dataFiles/02_IQ_Urlaub_within.csv">IQ-Werte und Urlaub (between)</a></p></li>
+<li><p>Benötigter Datensatz: <a href="q2_dataFiles/02_IQ_Urlaub_within.csv">IQ-Werte und Urlaub (within)</a></p></li>
 <li><p>Inhalt (Timestamps):</p>
 <ul>
 <li>00:50 Daten in R einlesen (über R-Code)</li>
