--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -470,12 +470,32 @@ div.tocify {
 <style>
 body {
     font-family: 'Muli';
-    font-size: 14px;
+    font-size: 18px;
 }
 </style>
-<h2>
-<font style="color:lightgrey;"> Einführung </font>
-</h1>
+<p>Wichtige Links:</p>
+<ul>
+<li><a href="https://cran.r-project.org/bin/windows/base/">Installation von R (Windows)</a></li>
+<li><a href="https://cran.r-project.org/bin/macosx/">Installation von R (Mac/ iOS)</a></li>
+<li><a href="https://www.rstudio.com/products/rstudio/download/">Installation von R-Studio</a></li>
+</ul>
+<p><br></p>
+<ul>
+<li>Server-Link für Remote-Desktop: <em>teaching.psych.bio.uni-goettingen.de:49121</em></li>
+</ul>
+<p><br></p>
+<ul>
+<li>Anmeldung:
+<ul>
+<li>Name: ug-student\vorname.nachname (genau wie bei StudIP)</li>
+<li>Passwort: wie bei StudIP</li>
+</ul></li>
+</ul>
+<p><br></p>
+<ul>
+<li><a href="https://praxistipps.chip.de/mac-remote-desktop-einrichten-so-gehts_51146">Tipps zu Remote-Desktop für Mac</a></li>
+</ul>
+<p><br></p>
 <div id="sitzung-1-einführung-in-das-arbeiten-mit-r" class="section level1">
 <h1><span class="header-section-number">1</span> Sitzung 1: Einführung in das Arbeiten mit R</h1>
 <ul>
@@ -485,13 +505,9 @@ body {
 <li><p>Benötigte Datensätze: KEINE</p></li>
 <li><p>Inhalt (Timestamps):</p>
 <ul>
-<li>02:00 Vor- und Nachteile eigene Installation vs. Remote Desktop</li>
-<li>04:30 Remotedesktopverbindung herstellen (siehe Anmerkung oben: neue Adresse)</li>
-<li>08:00 R-Studio über Remotedesktopverbindung öffnen</li>
-<li>12:00 R ohne R-Studio öffnen (nur zur Demo, werden wir später nicht mehr machen)</li>
-<li>13:00 Beziehung zwischen R und R-Studio</li>
-<li>15:50 R auf dem eigenen PC installieren</li>
-<li>17:00 R-Studio auf dem eigenen PC installieren</li>
+<li>00:00 Website</li>
+<li>05:00 Remote-Desktop</li>
+<li>12:30 R und R-Studio selber installieren</li>
 </ul></li>
 </ul>
 <p><br></p>
