--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -501,7 +501,7 @@ body {
 <ul>
 <li><p>Begleitendes R-Skript: NEIN</p></li>
 <li><p>Anzahl Videos: 3</p></li>
-<li><p>Zum 1. Video (Dauer: 20 min) geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1586181480108">hier</a></p></li>
+<li><p>Zum 1. Video (Dauer: 18 min) geht es <a href="https://conf.psych.bio.uni-goettingen.de/recording/screenshare/a61321b43fa64002d1766ced4a21d8fcb84842a5-1618041685960">hier</a></p></li>
 <li><p>Benötigte Datensätze: KEINE</p></li>
 <li><p>Inhalt (Timestamps):</p>
 <ul>
