--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -493,7 +493,7 @@ body {
 </ul>
 <p><br></p>
 <ul>
-<li><a href="https://praxistipps.chip.de/mac-remote-desktop-einrichten-so-gehts_51146">Tipps zu Remote-Desktop für Mac</a></li>
+<li><a href="https://praxistipps.chip.de/mac-remote-desktop-einrichten-so-gehts_51146">Tipps zu Remote-Desktop für Mac (ab Schritt 4)</a></li>
 </ul>
 <p><br></p>
 <div id="sitzung-1-einführung-in-das-arbeiten-mit-r" class="section level1">
@@ -508,6 +508,14 @@ body {
 <li>00:00 Website</li>
 <li>05:00 Remote-Desktop</li>
 <li>12:30 R und R-Studio selber installieren</li>
+</ul></li>
+</ul>
+<p><br></p>
+<ul>
+<li><p><strong>Lernziele</strong>: Nach dem Durcharbeiten des Videos solltet ihr…</p>
+<ul>
+<li>auf jeden Fall: eine Remotedesktopverbindung zum Gemi herstellen und RStudio öffnen können</li>
+<li>optional: R und RStudio auf dem eigenen Rechner installiert haben</li>
 </ul></li>
 </ul>
 <p><br></p>
@@ -537,6 +545,17 @@ body {
 </ul></li>
 </ul>
 <p><br></p>
+<ul>
+<li><p><strong>Lernziele</strong>: Nach dem Durcharbeiten des Videos solltet ihr…</p>
+<ul>
+<li>ein grobes Verständnis der Benutzeroberfläche von RStudio haben (welche Bereiche gibt es, wofür sind sie da)</li>
+<li>ein Skript erstellen, abspeichern, und wieder öffnen können</li>
+<li>ein RMarkdown-Dokument erstellen, abspeichern, und wieder öffnen können</li>
+<li>ein grobes Verständnis über die Unterschiede zwischen Skripts und Markdowns haben (note: in der Klausur sollen später Markdowns genutzt werden)</li>
+<li>verstehen, was es bedeutet, ein Markdown zu “knitten” (zB zu einer html-Datei) und ein simples Markdown knitten können</li>
+</ul></li>
+</ul>
+<p><br></p>
 </div>
 <div id="erste-schritte-in-r-teil-2" class="section level2">
 <h2><span class="header-section-number">1.2</span> Erste Schritte in R (Teil 2)</h2>
@@ -559,6 +578,17 @@ body {
 <li>29:15 Eingelesene Daten betrachten</li>
 <li>31:15 Den in der Console generierten Code betrachten</li>
 <li>35:00 Code zum Einlesen von Daten in ein Markdown einfügen</li>
+</ul></li>
+</ul>
+<p><br></p>
+<ul>
+<li><p><strong>Lernziele</strong>: Nach dem Durcharbeiten des Videos solltet ihr…</p>
+<ul>
+<li>eine csv-Datei aus einer Excel-Arbeitsmappe erstellen können</li>
+<li>bei einer csv-Datei erkennen, was die Spaltentrennzeichen und was die Dezimalzeichen sind</li>
+<li>eine csv-Datei über mindestens einen der beschriebenen Wege in R einlesen können (auf Überschriften achten!)</li>
+<li>ein grobes Verständnis der Variablentypen “Faktor” und “numerisch”/“integer” haben</li>
+<li>den durch das Einlesen der Daten generierten Code in der Console erkennen und in ein Markdown übertragen können</li>
 </ul></li>
 </ul>
 <p><br></p>
