--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -500,6 +500,10 @@ body {
 <li>Eine Anleitung für die Herstellung der Remote-Desktop-Verbindung über die <strong>App</strong> aus dem Apple Store gibt es <a href="mac_remoteDesk.html">hier</a>.</li>
 </ul>
 <p><br></p>
+<p><strong>Hinweis:</strong></p>
+<p><strong>Es kann beim Ansehen der Aufzeichnungen leider gelegentlich passieren (z.B. bei schlechter Internetverbindung), dass Ton und Bild irgendwann nicht mehr synchron sind.</strong></p>
+<p><strong>In dem Fall hilft es, das Fenster zu aktualisieren und ab der gewünschten Stelle nochmal neu abzuspielen.</strong></p>
+<p><br></p>
 <div id="sitzung-1-einführung-in-das-arbeiten-mit-r" class="section level1">
 <h1><span class="header-section-number">1</span> Sitzung 1: Einführung in das Arbeiten mit R</h1>
 <ul>
