--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -607,12 +607,13 @@ body {
 <ul>
 <li>Begleitendes R-Skript: <a href="q2_html_pages/Wiederholung1.html">Sitzung 2: Skript zu Video Teil 1 und 2</a></li>
 <li>Anzahl Videos: 2</li>
+<li>Das im Video angesprochene PDF gibt es <a href="q2_dataFiles/02_Einführung_R_SoSe21_Teil1.pdf">hier</a> und natürlich auch in stud.ip</li>
 </ul>
 <div id="teil-1" class="section level2">
 <h2><span class="header-section-number">2.1</span> Teil 1:</h2>
 <ul>
 <li><p>Zum 1. Video (Dauer: 59 min) geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1587658895535">hier</a></p></li>
-<li><p>Benötigter Datensatz: <a href="q2_dataFiles/02_IQ_Priming_between.csv">IQ-Werte und Urlaub (between)</a></p></li>
+<li><p>Benötigter Datensatz: <a href="q2_dataFiles/02_IQ_Priming_between.csv">IQ-Werte und Priming (between)</a></p></li>
 <li><p>Inhalt (Timestamps):</p>
 <ul>
 <li>00:00 Willkommen</li>
