--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -628,6 +628,18 @@ body {
 <li>52:50 Cohen’s d berechnen</li>
 </ul></li>
 </ul>
+<p><br></p>
+<ul>
+<li><p><strong>Lernziele</strong>: Nach dem Durcharbeiten des Videos solltet ihr…</p>
+<ul>
+<li>den RCommander öffnen können</li>
+<li>einen Datensatz im Commander laden können</li>
+<li>Deskriptive Statistiken für einen Datensatz berechnen können</li>
+<li>eine Abbildung über Mittelwerte mit Konfidenzintervallen erstellen können</li>
+<li>einen t-Test im Commander und Cohen’s d außerhalb des Commanders berechnen können</li>
+</ul></li>
+</ul>
+<p><br></p>
 </div>
 <div id="teil-2" class="section level2">
 <h2><span class="header-section-number">2.2</span> Teil 2:</h2>
@@ -642,6 +654,13 @@ body {
 <li>17:45 Abbildung erstellen über R-Commander</li>
 <li>19:40 T-Test für abhängige Daten (über R-Commander)</li>
 <li>22:00 Cohen’s d berechnen</li>
+</ul></li>
+</ul>
+<p><br></p>
+<ul>
+<li><p><strong>Lernziele</strong>: Nach dem Durcharbeiten des Videos solltet ihr…</p>
+<ul>
+<li>dieselben Schritte wie beim vorherigen Video für abhängige Daten ausführen können</li>
 </ul></li>
 </ul>
 <p><br></p>
